Use application instead of shadowJar to export rules